K8s Manifests/03-deployment-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: clients-demo
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:6.0
          ports:
          - containerPort: 27017
         - name: mongo-data
           mountPath: /data/db
     volumes:
       - name: mongo-data
         persistentVolumeClaim:
           claimName: mongo-pvc
