K8s Manifests/04-service-mongo.yaml
apiVersion: v1
kind: Service
metadata:
name: mongo
namespace: clients-demo
labels:
app: mongo
spec:
ports:
- port: 27017
targetPort: 27017
protocol: TCP
name: mongodb
selector:
app: mongo
type: ClusterIP
