K8s Manifests/05-Service-Clients-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: clients-api
  namespace: clients-demo
  labels:
    app: clients-api
spec:
  selector:
    app: clients-api
  ports:
    - name: http
      port: 80
      targetPort: 8081
  type: ClusterIP
