K8s Manifests/08-ingress-nginx-controller-service.yaml
# Service of type LoadBalancer — this creates the cloud load balancer IP that fronts the ingress controller.
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-lb
  namespace: clients-demo
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
   - name: http
     port: 80
     targetPort: 80
   - name: https
     port: 443
     targetPort: 443
